--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,13 +29,13 @@ jobs:
     steps:
       - checkout
       - run:
-          name: init PyPI creds in .pypirc
+          name: set PyPI creds in .pypirc
           command: |
             echo -e "[pypi]" >> ~/.pypirc
             echo -e "username = OsmoSystems" >> ~/.pypirc
             echo -e "password = $PYPI_PASSWORD" >> ~/.pypirc
       - run:
-          name: upgrade build dependencies
+          name: upgrade build tooling
           command: pip install --upgrade setuptools wheel twine
       - run:
           name: build package
