--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - run:
           name: build package
           command: |
-            PATCH_VERSION=$CIRCLE_BUILD_NUM
+            export PATCH_VERSION=$CIRCLE_BUILD_NUM
             python setup.py bdist_wheel
       - run:
           name: publish
